# mini-c-lib

./: CMakeLists.txt  README.md
include/: str.h  vec.h
src/: str.c  vec.c
test/: str_test.c  vec_test.c
